# Duchess

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: agent-design.md  architecture.md  game-mechanics.md  mvp-completion-summary.md  mvp-plan.md
docs/features/: report-generator.md
duchess/: __init__.py
duchess/agents/: __init__.py  agent.py  memory.py
duchess/engine/: __init__.py  game_state.py
duchess/engine/characters/: __init__.py  base.py  empath.py  imp.py  investigator.py  scarlet_woman.py  washerwoman.py
duchess/reasoning/: __init__.py  constraints.py  deduction.py  world_builder.py
duchess/reporting/: __init__.py  report_generator.py
duchess/simulation/: __init__.py  run.py  scenarios.py
duchess/utils/: __init__.py  logger.py
examples/: report_example.py
tests/: __init__.py  test_agent.py  test_characters.py  test_constraints.py  test_deduction.py  test_game_state.py  test_report_generator.py  test_scenarios.py  test_setup.py  test_world_builder.py
